added getReserveUserId
